tests/fixtures/errors/e0107_unknown_port.mimz
// expect: E0107
module Child {
  in a: bit
  out z: bit
  z = a
}
module M {
  in x: bit
  out y: bit
  let c = Child() { a: x, nope: x }
  y = c.z
}
